Refactoring & started output visualisation

--- a/src/se306/scheduler/view/home.fxml
+++ b/src/se306/scheduler/view/home.fxml
@@ -30,11 +30,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="826.0" prefWidth="868.0" />
-                    </content>
-                  </ScrollPane>
+                  <ScrollPane fx:id="scrollPane" prefHeight="1072.0" prefWidth="779.0" GridPane.columnIndex="1" />
                   <Pane fx:id="graphPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="643.0" prefWidth="702.0" translateX="3.0" translateY="1.0" />
                </children>
             </GridPane>
