--- a/src/se306/scheduler/view/home.fxml
+++ b/src/se306/scheduler/view/home.fxml
@@ -32,10 +32,10 @@
             </rowConstraints>
             <children>
                 <ScrollPane fx:id="scrollPane" prefHeight="627.0" prefWidth="710.0" styleClass="dark-grey" GridPane.columnIndex="1" />
-                <Pane fx:id="graphPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="643.0" prefWidth="702.0" translateX="3.0" translateY="1.0" />
+                <Pane fx:id="graphPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="629.0" prefWidth="710.0" />
             </children>
         </GridPane>
-      <GridPane gridLinesVisible="true" styleClass="footer" stylesheets="@home_style.css" GridPane.rowIndex="1">
+      <GridPane gridLinesVisible="true" prefHeight="146.0" prefWidth="1420.0" styleClass="footer" stylesheets="@home_style.css" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -86,5 +86,9 @@
       </GridPane>
     </GridPane>
     <Rectangle fx:id="greyRectangle" arcHeight="5.0" arcWidth="5.0" height="800.0" opacity="0.45" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1422.0" />
-    <Button fx:id="startButton" layoutX="404.0" layoutY="286.0" mnemonicParsing="false" prefHeight="229.0" prefWidth="612.0" stylesheets="@home_style.css" text="Start" />
+   <AnchorPane layoutX="470.0" layoutY="270.0">
+      <children>
+          <Button fx:id="startButton" layoutX="28.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="180.0" prefWidth="418.0" stylesheets="@home_style.css" text="Begin&#10;Scheduling" textAlignment="CENTER" />
+      </children>
+   </AnchorPane>
 </AnchorPane>
