--- a/src/se306/scheduler/view/home.fxml
+++ b/src/se306/scheduler/view/home.fxml
@@ -9,10 +9,13 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@home_style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="se306.scheduler.controller.HomeController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@home_style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="se306.scheduler.controller.HomeController">
     <GridPane prefHeight="800.0" prefWidth="1420.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -21,7 +24,7 @@
             <RowConstraints maxHeight="683.0" minHeight="10.0" prefHeight="659.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="705.9999908447265" minHeight="10.0" prefHeight="141.0" vgrow="SOMETIMES" />
         </rowConstraints>
-        <GridPane prefHeight="403.0" prefWidth="1420.0" stylesheets="@home_style.css">
+        <GridPane prefHeight="403.0" prefWidth="1420.0" styleClass="scroll-pane" stylesheets="@home_style.css">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="719.9999267578125" minWidth="10.0" prefWidth="709.8000244140625" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="883.2000488281249" minWidth="10.0" prefWidth="710.5999755859376" />
@@ -31,57 +34,90 @@
             </rowConstraints>
             <children>
                 <ScrollPane fx:id="scrollPane" prefHeight="627.0" prefWidth="710.0" styleClass="dark-grey" GridPane.columnIndex="1" />
-                <Pane fx:id="graphPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="629.0" prefWidth="710.0">
-               <children>
-                  <Label fx:id="filenameLabel" layoutX="9.0" layoutY="7.0" styleClass="filename" stylesheets="@home_style.css" text="test.dot" />
-               </children></Pane>
+            <Label fx:id="filenameLabel" alignment="TOP_LEFT" contentDisplay="TOP" styleClass="filename" stylesheets="@home_style.css" translateX="10.0" translateY="10.0" GridPane.halignment="LEFT" GridPane.valignment="TOP" />
+                <Pane fx:id="graphPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="610.0" prefWidth="709.0" GridPane.valignment="BOTTOM" />
             </children>
         </GridPane>
         <Pane prefHeight="153.0" prefWidth="1420.0" styleClass="footer" stylesheets="@home_style.css" GridPane.rowIndex="1">
-         <ScrollPane layoutX="212.0" layoutY="1.0" prefHeight="141.0" prefWidth="1351.0" styleClass="footer" stylesheets="@home_style.css">
-           <content>
-             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="125.0" prefWidth="1353.0">
+         <AnchorPane layoutX="210.0" prefHeight="146.0" prefWidth="1212.0">
+            <children>
+               <AnchorPane layoutX="185.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
+                  <styleClass>
+                     <String fx:value="box" />
+                     <String fx:value="green-box" />
+                  </styleClass>
                   <children>
-                     <AnchorPane layoutX="359.0" layoutY="15.0" prefHeight="99.0" prefWidth="226.0" stylesheets="@home_style.css">
+                     <Label layoutX="14.0" layoutY="8.0" stylesheets="@home_style.css" text="Processors (To schedule)" textAlignment="CENTER">
+                        <font>
+                           <Font name="Consolas" size="15.0" />
+                        </font>
                         <styleClass>
-                           <String fx:value="box" />
-                           <String fx:value="green-box" />
+                           <String fx:value="info-title" />
+                           <String fx:value="info" />
                         </styleClass>
-                     </AnchorPane>
-                     <AnchorPane layoutX="1097.0" layoutY="15.0" prefHeight="99.0" prefWidth="226.0" stylesheets="@home_style.css">
-                        <styleClass>
-                           <String fx:value="box" />
-                           <String fx:value="green-box" />
-                        </styleClass>
-                     </AnchorPane>
-                     <AnchorPane layoutX="851.0" layoutY="15.0" prefHeight="99.0" prefWidth="226.0" stylesheets="@home_style.css">
-                        <styleClass>
-                           <String fx:value="box" />
-                           <String fx:value="green-box" />
-                        </styleClass>
-                     </AnchorPane>
-                     <AnchorPane layoutX="605.0" layoutY="15.0" prefHeight="99.0" prefWidth="226.0" stylesheets="@home_style.css">
-                        <styleClass>
-                           <String fx:value="box" />
-                           <String fx:value="green-box" />
-                        </styleClass>
-                     </AnchorPane>
-                     <AnchorPane layoutX="113.0" layoutY="15.0" prefHeight="99.0" prefWidth="226.0" stylesheets="@home_style.css">
-                        <styleClass>
-                           <String fx:value="box" />
-                           <String fx:value="green-box" />
-                        </styleClass>
-                        <children>
-                           <Label layoutX="54.0" layoutY="14.0" stylesheets="@home_style.css" text="Number of Processors" textAlignment="CENTER" />
-                        </children>
-                     </AnchorPane>
+                     </Label>
+                     <Label fx:id="numProcLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="21.0" prefHeight="58.0" prefWidth="197.0" styleClass="info" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
                   </children>
                </AnchorPane>
-           </content>
-         </ScrollPane>
+               <AnchorPane layoutX="441.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
+                  <styleClass>
+                     <String fx:value="box" />
+                     <String fx:value="green-box" />
+                  </styleClass>
+                  <children>
+                     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="64.0" layoutY="8.0" stylesheets="@home_style.css" text="Threads Used" textAlignment="CENTER">
+                        <font>
+                           <Font name="Consolas" size="15.0" />
+                        </font>
+                        <styleClass>
+                           <String fx:value="info-title" />
+                           <String fx:value="info" />
+                        </styleClass>
+                     </Label>
+                     <Label fx:id="numThreadsLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="21.0" prefHeight="58.0" prefWidth="197.0" styleClass="info" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
+                  </children>
+               </AnchorPane>
+               <AnchorPane layoutX="697.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
+                  <styleClass>
+                     <String fx:value="box" />
+                     <String fx:value="green-box" />
+                  </styleClass>
+                  <children>
+                     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="43.0" layoutY="8.0" stylesheets="@home_style.css" text="Current Best Time" textAlignment="CENTER">
+                        <font>
+                           <Font name="Consolas" size="15.0" />
+                        </font>
+                        <styleClass>
+                           <String fx:value="info-title" />
+                           <String fx:value="info" />
+                        </styleClass>
+                     </Label>
+                     <Label fx:id="bestTimeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="21.0" prefHeight="58.0" prefWidth="197.0" styleClass="info" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
+                  </children>
+               </AnchorPane>
+               <AnchorPane layoutX="953.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
+                  <styleClass>
+                     <String fx:value="box" />
+                     <String fx:value="green-box" />
+                  </styleClass>
+                  <children>
+                     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="43.0" layoutY="8.0" stylesheets="@home_style.css" text="Schedules Checked" textAlignment="CENTER">
+                        <font>
+                           <Font name="Consolas" size="15.0" />
+                        </font>
+                        <styleClass>
+                           <String fx:value="info-title" />
+                           <String fx:value="info" />
+                        </styleClass>
+                     </Label>
+                     <Label fx:id="checkedLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="21.0" prefHeight="58.0" prefWidth="197.0" styleClass="info" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
+                  </children>
+               </AnchorPane>
+            </children>
+         </AnchorPane>
          <Pane prefHeight="148.0" prefWidth="404.0" styleClass="timer-box" stylesheets="@home_style.css">
             <children>
-               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="76.0" layoutY="32.0" styleClass="info-title" stylesheets="@home_style.css" text="Time Elapsed" />
+               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="76.0" layoutY="32.0" styleClass="timer-title" stylesheets="@home_style.css" text="Time Elapsed" />
                   <Label fx:id="timeDisplay" layoutX="38.0" layoutY="56.0" stylesheets="@home_style.css" text="00:00.00">
                       <font>
                           <Font name="Arial" size="55.0" />
@@ -94,11 +130,18 @@
             </children>
          </Pane>
         </Pane>
+      <Line endX="223.0" endY="666.0" startX="223.0" startY="1321.8333740234375" translateX="710.0">
+         <stroke>
+            <LinearGradient endY="1.0" startY="0.004761904761904762">
+               <stops>
+                  <Stop color="#ffffff00" />
+                  <Stop color="BLACK" offset="0.5002567444799937" />
+                  <Stop color="#ffffff00" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </stroke>
+      </Line>
     </GridPane>
-    <Rectangle fx:id="greyRectangle" arcHeight="5.0" arcWidth="5.0" height="800.0" opacity="0.45" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" width="1422.0" />
-   <AnchorPane fx:id="anchorPane" layoutX="470.0" layoutY="270.0" visible="false">
-      <children>
-          <Button fx:id="startButton" layoutX="28.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="180.0" prefWidth="418.0" stylesheets="@home_style.css" text="Begin&#10;Scheduling" textAlignment="CENTER" />
-      </children>
-   </AnchorPane>
+    <Rectangle fx:id="greyRectangle" arcHeight="5.0" arcWidth="5.0" height="812.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1422.0" />
+    <Button fx:id="startButton" layoutX="502.0" layoutY="253.0" mnemonicParsing="false" prefHeight="180.0" prefWidth="418.0" stylesheets="@home_style.css" text="Begin&#10;Scheduling" textAlignment="CENTER" />
 </AnchorPane>
