--- a/src/se306/scheduler/view/home_style.css
+++ b/src/se306/scheduler/view/home_style.css
@@ -75,6 +75,17 @@
     -fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #5df2ff, rgba(93, 242, 255, 0));
 }
 
+.timer-done .text {
+    -fx-fill: #09e200;
+    -fx-stroke: black;
+    -fxstroke-width: 1px;
+}
+
+.timer-done-title .text {
+    -fx-stroke-width: 0;
+    -fx-fill: #004700;
+}
+
 .box {
     -fx-background-radius: 10;
 }
