--- a/src/se306/scheduler/view/home_style.css
+++ b/src/se306/scheduler/view/home_style.css
@@ -36,7 +36,7 @@
 }
 
 .footer {
-    -fx-background-color:  linear-gradient(from 0% 0% to 0% 100%, #507fff, #3454a8);
+    -fx-background-color:  linear-gradient(from 0% 0% to 0% 100%, #6ea1ff, #2a4386);
 }
 
 .filename {
@@ -44,6 +44,7 @@
     -fx-font-size: 30px;
     -fx-text-fill: black;
 }
+
 .info {
     -fx-font-family: Consolas;
     -fx-text-fill: #1b274e;
@@ -63,14 +64,6 @@
     -fx-text-fill: white;
 }
 
-.progress-bar {
-    -fx-accent: #0036af;
-}
-
-.progress-text {
-    -fx-font-size: 30px;
-}
-
 .timer-box {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #5df2ff, rgba(93, 242, 255, 0));
 }
@@ -86,10 +79,18 @@
     -fx-fill: #004700;
 }
 
+.timer-done-footer {
+    -fx-background-color:  linear-gradient(from 0% 0% to 0% 100%, #30ff00, #167000);
+}
+
+.timer-done-box {
+    -fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #8cff76, rgba(93, 242, 255, 0));
+}
+
 .box {
     -fx-background-radius: 10;
 }
 
-.green-box {
+.white-box {
     -fx-background-color: linear-gradient(from 0% 0% to 0% 100%, #ffffff, rgba(77, 162, 178, 0));
 }
