--- a/resources/home.fxml
+++ b/resources/home.fxml
@@ -15,16 +15,16 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@home_style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="se306.scheduler.controller.HomeController">
-    <GridPane prefHeight="800.0" prefWidth="1420.0">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@home_style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="se306.scheduler.controller.HomeController">
+    <GridPane layoutY="65.0" prefHeight="735.0" prefWidth="1420.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints maxHeight="683.0" minHeight="10.0" prefHeight="659.0" vgrow="SOMETIMES" />
-         <RowConstraints />
+            <RowConstraints maxHeight="683.0" minHeight="10.0" prefHeight="594.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="197.0" minHeight="125.0" prefHeight="141.0" />
         </rowConstraints>
-        <GridPane prefHeight="403.0" prefWidth="1420.0" styleClass="scroll-pane" stylesheets="@home_style.css">
+        <GridPane minHeight="0.0" minWidth="0.0" prefHeight="574.0" prefWidth="1420.0" styleClass="scroll-pane" stylesheets="@home_style.css">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="719.9999267578125" minWidth="10.0" prefWidth="709.8000244140625" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="883.2000488281249" minWidth="10.0" prefWidth="710.5999755859376" />
@@ -33,21 +33,21 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <ScrollPane fx:id="scrollPane" prefHeight="627.0" prefWidth="710.0" GridPane.columnIndex="1" />
-            <Label fx:id="filenameLabel" alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="30.0" prefWidth="673.0" stylesheets="@home_style.css" translateX="10.0" translateY="10.0" GridPane.halignment="LEFT" GridPane.valignment="TOP" />
-                <Pane fx:id="graphPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="610.0" prefWidth="709.0" GridPane.valignment="BOTTOM" />
+                <ScrollPane fx:id="scrollPane" minHeight="0.0" minWidth="0.0" prefHeight="558.0" prefWidth="710.0" GridPane.columnIndex="1" GridPane.valignment="BOTTOM" />
+            <Label fx:id="filenameLabel" alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="30.0" prefWidth="673.0" stylesheets="@home_style.css" translateX="10.0" translateY="-5.0" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM" />
+                <Pane fx:id="graphPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="543.0" prefWidth="708.0" GridPane.valignment="TOP" />
             </children>
         </GridPane>
         <Pane fx:id="bottomPane" prefHeight="153.0" prefWidth="1420.0" styleClass="footer" stylesheets="@home_style.css" GridPane.rowIndex="1">
          <AnchorPane layoutX="210.0" prefHeight="146.0" prefWidth="1212.0">
             <children>
-               <AnchorPane layoutX="185.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
+               <AnchorPane fx:id="numProcPane" centerShape="false" layoutX="185.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
                   <styleClass>
                      <String fx:value="box" />
                      <String fx:value="white-box" />
                   </styleClass>
                   <children>
-                     <Label layoutX="9.0" layoutY="8.0" stylesheets="@home_style.css" text="Processors To Schedule On" textAlignment="CENTER">
+                     <Label layoutX="7.0" layoutY="8.0" prefHeight="12.0" prefWidth="213.0" stylesheets="@home_style.css" text="Processors To Schedule On" textAlignment="CENTER" wrapText="true">
                         <font>
                            <Font name="Consolas" size="15.0" />
                         </font>
@@ -56,10 +56,10 @@
                            <String fx:value="info" />
                         </styleClass>
                      </Label>
-                     <Label fx:id="numProcLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="25.0" prefHeight="58.0" prefWidth="197.0" styleClass="box" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
+                     <Label fx:id="numProcLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="38.0" prefHeight="58.0" prefWidth="197.0" styleClass="box" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
                   </children>
                </AnchorPane>
-               <AnchorPane layoutX="441.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
+               <AnchorPane fx:id="numThreadsPane" layoutX="441.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
                   <styleClass>
                      <String fx:value="box" />
                      <String fx:value="white-box" />
@@ -74,10 +74,10 @@
                            <String fx:value="info" />
                         </styleClass>
                      </Label>
-                     <Label fx:id="numThreadsLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="25.0" prefHeight="58.0" prefWidth="197.0" styleClass="box" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
+                     <Label fx:id="numThreadsLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="38.0" prefHeight="58.0" prefWidth="197.0" styleClass="box" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
                   </children>
                </AnchorPane>
-               <AnchorPane layoutX="697.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
+               <AnchorPane fx:id="bestTimePane" layoutX="697.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
                   <styleClass>
                      <String fx:value="box" />
                      <String fx:value="white-box" />
@@ -92,16 +92,16 @@
                            <String fx:value="info" />
                         </styleClass>
                      </Label>
-                     <Label fx:id="bestTimeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="25.0" prefHeight="58.0" prefWidth="197.0" styleClass="box" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
+                     <Label fx:id="bestTimeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="38.0" prefHeight="58.0" prefWidth="197.0" styleClass="box" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
                   </children>
                </AnchorPane>
-               <AnchorPane layoutX="953.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
+               <AnchorPane fx:id="checkedPane" layoutX="953.0" layoutY="24.0" prefHeight="108.0" prefWidth="226.0" stylesheets="@home_style.css">
                   <styleClass>
                      <String fx:value="box" />
                      <String fx:value="white-box" />
                   </styleClass>
                   <children>
-                     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="35.0" layoutY="8.0" stylesheets="@home_style.css" text="Schedules Remaining" textAlignment="CENTER">
+                     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="1.0" prefHeight="48.0" prefWidth="197.0" stylesheets="@home_style.css" text="Possible Remaining Schedules" textAlignment="CENTER" wrapText="true">
                         <font>
                            <Font name="Consolas" size="15.0" />
                         </font>
@@ -110,14 +110,14 @@
                            <String fx:value="info" />
                         </styleClass>
                      </Label>
-                     <Label fx:id="checkedLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="25.0" prefHeight="58.0" prefWidth="197.0" styleClass="box" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
+                     <Label fx:id="checkedLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="38.0" prefHeight="58.0" prefWidth="197.0" styleClass="box" stylesheets="@home_style.css" text="--" textAlignment="CENTER" />
                   </children>
                </AnchorPane>
             </children>
          </AnchorPane>
          <Pane fx:id="timerboxPane" prefHeight="148.0" prefWidth="404.0" styleClass="timer-box" stylesheets="@home_style.css">
             <children>
-               <Label fx:id="timeTitleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="39.0" layoutY="32.0" prefHeight="30.0" prefWidth="248.0" styleClass="timer-title" stylesheets="@home_style.css" text="Time Elapsed" />
+               <Label fx:id="timeTitleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="39.0" layoutY="32.0" prefHeight="30.0" prefWidth="248.0" styleClass="title-text" stylesheets="@home_style.css" text="Time Elapsed" />
                   <Label fx:id="timeDisplay" layoutX="38.0" layoutY="56.0" stylesheets="@home_style.css" text="00:00.00">
                       <font>
                           <Font name="Arial" size="55.0" />
@@ -130,9 +130,9 @@
             </children>
          </Pane>
         </Pane>
-      <Line endX="223.0" endY="666.0" startX="223.0" startY="1321.8333740234375" translateX="710.0">
+      <Line endX="223.0" endY="666.0" opacity="0.5" startX="223.0" startY="1260.5" translateX="710.0">
          <stroke>
-            <LinearGradient endY="1.0" startY="0.004761904761904762">
+            <LinearGradient endX="1.0" endY="1.0" startY="0.004761904761904762">
                <stops>
                   <Stop color="#ffffff00" />
                   <Stop color="BLACK" offset="0.5002567444799937" />
@@ -142,6 +142,37 @@
          </stroke>
       </Line>
     </GridPane>
+   <AnchorPane fx:id="headerPane1" prefHeight="63.0" prefWidth="711.0" styleClass="header-box" stylesheets="@home_style.css">
+      <children>
+         <Label layoutX="265.0" layoutY="14.0" stylesheets="@home_style.css" text="Input Graph">
+            <styleClass>
+               <String fx:value="title-text" />
+               <String fx:value="header-text" />
+            </styleClass>
+         </Label>
+      </children>
+   </AnchorPane>
+   <AnchorPane fx:id="headerPane2" layoutX="710.0" prefHeight="63.0" prefWidth="711.0" styleClass="header-box" stylesheets="@home_style.css">
+      <children>
+         <Label fx:id="headerLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="23.0" layoutY="14.0" prefHeight="35.0" prefWidth="666.0" stylesheets="@home_style.css" text="Current Best Output Schedule">
+            <styleClass>
+               <String fx:value="title-text" />
+               <String fx:value="header-text" />
+            </styleClass>
+         </Label>
+         <Line endX="230.0" endY="1207.039794921875" layoutX="-230.0" layoutY="-1199.0" opacity="0.21" startX="230.0" startY="1254.0">
+            <stroke>
+               <LinearGradient endY="1.0" startY="0.004761904761904762">
+                  <stops>
+                     <Stop color="#ffffff00" />
+                     <Stop color="BLACK" offset="0.5002567444799937" />
+                     <Stop color="#ffffff00" offset="1.0" />
+                  </stops>
+               </LinearGradient>
+            </stroke>
+         </Line>
+      </children>
+   </AnchorPane>
     <Rectangle fx:id="greyRectangle" arcHeight="5.0" arcWidth="5.0" height="812.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1422.0" />
     <Button fx:id="startButton" layoutX="502.0" layoutY="253.0" mnemonicParsing="false" prefHeight="180.0" prefWidth="418.0" stylesheets="@home_style.css" text="Begin&#10;Scheduling" textAlignment="CENTER" />
 </AnchorPane>
